staging/src/k8s.io/api/testdata/v1.14.0/admissionregistration.k8s.io.v1beta1.MutatingWebhookConfiguration.json
{
  "kind": "MutatingWebhookConfiguration",
  "apiVersion": "admissionregistration.k8s.io/v1beta1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "namespace": "4",
    "selfLink": "5",
    "uid": "ą飋īqJ枊a8衍`Ĩɘ.蘯6ċV夸e",
    "resourceVersion": "16964250748386560239",
    "generation": 8071137005907523419,
    "creationTimestamp": null,
    "deletionGracePeriodSeconds": -4955867275792137171,
    "labels": {
      "7": "8"
    },
    "annotations": {
      "9": "10"
    },
    "ownerReferences": [
      {
        "apiVersion": "11",
        "kind": "12",
        "name": "13",
        "uid": "Dz廔ȇ{sŊƏp",
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "14"
    ],
    "clusterName": "15",
    "managedFields": [
      {
        "manager": "16",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "17",
        "fields": {"18":{"19":null}}
      }
    ]
  },
  "webhooks": [
    {
      "name": "24",
      "clientConfig": {
        "url": "25",
        "service": {
          "namespace": "26",
          "name": "27",
          "path": "28"
        },
        "caBundle": "/Q=="
      },
      "rules": [
        {
          "operations": [
            "凗蓏Ŋ蛊ĉy緅縕\u003eŽ"
          ],
          "apiGroups": [
            "29"
          ],
          "apiVersions": [
            "30"
          ],
          "resources": [
            "31"
          ],
          "scope": "ǡƏS$+½H"
        }
      ],
      "failurePolicy": "洝尿彀",
      "namespaceSelector": {
        "matchLabels": {
          "8--58----0683-b-w9.j---57-y-o-4-m-7r--0am6b4---l---rcdj24r-----v-2/uY._.-44..d.__Gg8-2_kS91.eK": "1d3-7-f8"
        },
        "matchExpressions": [
          {
            "key": "M-H_5_.t..bGE.9__.3_u1.m_.5AW-_S-.3g.7_2fNc5G",
            "operator": "NotIn",
            "values": [
              "7_M9T9sH.Wu5--.K_.0--_0P7_.C.Ze--D07.a_.y_y_oU"
            ]
          }
        ]
      },
      "sideEffects": "ʖ畬x骀Šĸů湙騘\u0026啞川J缮ǚb",
      "timeoutSeconds": 743309977,
      "admissionReviewVersions": [
        "38"
      ]
    }
  ]
}
